# docker-actix-web

./: README.md  docker-compose.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile
backend/src/: auth.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
db/data/: postmaster.pid
db/data/base/13408/: pg_internal.init
db/data/base/16384/: 1247  1249  1259  2224  24576  24580  24582  24584  24590  24591  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
db/data/global/: 1262  2671  pg_control  pg_internal.init
db/data/pg_stat/: db_0.stat  db_13408.stat  db_16384.stat  global.stat
db/data/pg_stat_tmp/: db_0.stat  db_13408.stat  db_16384.stat  global.stat
db/initdb/: restoredb.sh  setup.sql
frontend/: Dockerfile  package.json
frontend/src/: App.tsx
nginx/: nginx.conf
