[package]
name = "backend"
version = "0.1.0"
authors = ["kobayashiryousuke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3.1.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
alcoholic_jwt = "1.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
config = "0.10.1"
deadpool-postgres = "0.5.6"
derive_more = "0.99.11"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
failure = "0.1.8"
futures = "0.3.6"
r2d2 = "0.8.9"
reqwest = "0.10.8"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tokio-postgres = "0.6.0"
